<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"><b><i>Goldtek Sports Watch</i></b></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_helpscreen">Helpscreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="pref_send_report">Send crash reports</string>
    <string name="pref_send_report_summary">Helps to fix bugs</string>
    <string name="pref_orientation_title">Set Orientation</string>
    <string name="pref_orientation_summary">Set the orientation</string>
    <string name="pref_uuid_title">Change UUID</string>
    <string name="pref_uuid_summary">Use non-standard serial UUID</string>
    <string name="pref_uuid_update">Update UUID</string>
    <string name="pref_update_setting">Update Settings</string>
    <string name="pref_text_buffer_title">Input Buffer Size (In Chars)</string>
    <string name="pref_text_buffer_summary">Change the receive text buffer size</string>
    
           
    <string name="template_screen_off">screen off</string>
    <string name="template_screen_on">screen on</string>
    <string name="accessibility_service">Accessibility/Accessibility Service</string>
    <string name="accessibility_service_label">GWatch </string>
    <string name="accessibility_service_instructions"><b><i>
        \n\n        Enable GWatch (Settings -> Accessibility -> GWatch).
        \n\n        To get Notification from your social Network and Email
        \n\n               
        \n\n                    facebook twitter Whatsapp Line.
        \n\n                   Gmail and other email client 
        \n\n      
        
    </i></b></string>


<!-- new strings -->
    <string name="connection">Connection</string>
    <string name="vibration">Vibration</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="connecting">Connecting...</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="v_off">Off</string>
    <string name="v_low">Low</string>
    <string name="v_high">High</string>
    <string name="dialog_title">Select your GWatch</string>
    <string name="sync_time">Sync Time</string>
    <string name="notification">Notification</string>


</resources>